# ferrum-router

./: Cargo.toml  README.md
examples/: custom_404.rs  simple.rs  simple_with_macro.rs  simple_with_types.rs  struct_handler.rs  uri_for.rs
src/: glob.rs  lib.rs  macros.rs  recognizer.rs  router.rs  uri_for.rs
src/recognizer/: glob.rs  matcher.rs  mod.rs  tests.rs  types.rs
src/router/: id.rs  mod.rs  tests.rs
src/uri_for/: mod.rs  tests.rs
